# serializer version: 1
# name: TestDatabase.test_serialize_database_no_person_on_events
  '''
  {
      "events": [
          {
              "key": "uuid",
              "type": "string"
          },
          {
              "key": "event",
              "type": "string"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "elements_chain",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "$session_id",
              "type": "string"
          },
          {
              "key": "$window_id",
              "type": "string"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ]
          },
          {
              "key": "poe",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "id",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_0",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_1",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_2",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_3",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_4",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          },
          {
              "key": "$group_0",
              "type": "string"
          },
          {
              "key": "group_0",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_1",
              "type": "string"
          },
          {
              "key": "group_1",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_2",
              "type": "string"
          },
          {
              "key": "group_2",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_3",
              "type": "string"
          },
          {
              "key": "group_3",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_4",
              "type": "string"
          },
          {
              "key": "group_4",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "session",
              "type": "lazy_table",
              "table": "events",
              "fields": [
                  "id",
                  "duration"
              ]
          }
      ],
      "groups": [
          {
              "key": "index",
              "type": "integer"
          },
          {
              "key": "key",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "updated_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          }
      ],
      "persons": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "is_identified",
              "type": "boolean"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id"
              ]
          }
      ],
      "person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi"
              ]
          }
      ],
      "person_overrides": [
          {
              "key": "old_person_id",
              "type": "string"
          },
          {
              "key": "override_person_id",
              "type": "string"
          },
          {
              "key": "oldest_event",
              "type": "datetime"
          },
          {
              "key": "merged_at",
              "type": "datetime"
          },
          {
              "key": "created_at",
              "type": "datetime"
          }
      ],
      "session_replay_events": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "first_url",
              "type": "string"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "mouse_activity_count",
              "type": "integer"
          },
          {
              "key": "active_milliseconds",
              "type": "integer"
          },
          {
              "key": "console_log_count",
              "type": "integer"
          },
          {
              "key": "console_warn_count",
              "type": "integer"
          },
          {
              "key": "console_error_count",
              "type": "integer"
          },
          {
              "key": "size",
              "type": "integer"
          },
          {
              "key": "event_count",
              "type": "integer"
          },
          {
              "key": "message_count",
              "type": "integer"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          },
          {
              "key": "start_time",
              "type": "datetime"
          },
          {
              "key": "end_time",
              "type": "datetime"
          }
      ],
      "cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi"
              ]
          }
      ],
      "static_cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi"
              ]
          }
      ],
      "log_entries": [
          {
              "key": "log_source",
              "type": "string"
          },
          {
              "key": "log_source_id",
              "type": "string"
          },
          {
              "key": "instance_id",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "message",
              "type": "string"
          },
          {
              "key": "level",
              "type": "string"
          }
      ],
      "console_logs_log_entries": [
          {
              "key": "log_source",
              "type": "string"
          },
          {
              "key": "log_source_id",
              "type": "string"
          },
          {
              "key": "instance_id",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "message",
              "type": "string"
          },
          {
              "key": "level",
              "type": "string"
          }
      ],
      "batch_export_log_entries": [
          {
              "key": "log_source",
              "type": "string"
          },
          {
              "key": "log_source_id",
              "type": "string"
          },
          {
              "key": "instance_id",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "message",
              "type": "string"
          },
          {
              "key": "level",
              "type": "string"
          }
      ],
      "raw_session_replay_events": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "min_first_timestamp",
              "type": "datetime"
          },
          {
              "key": "max_last_timestamp",
              "type": "datetime"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "mouse_activity_count",
              "type": "integer"
          },
          {
              "key": "active_milliseconds",
              "type": "integer"
          },
          {
              "key": "console_log_count",
              "type": "integer"
          },
          {
              "key": "console_warn_count",
              "type": "integer"
          },
          {
              "key": "console_error_count",
              "type": "integer"
          },
          {
              "key": "size",
              "type": "integer"
          },
          {
              "key": "event_count",
              "type": "integer"
          },
          {
              "key": "message_count",
              "type": "integer"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          }
      ],
      "raw_person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi"
              ]
          },
          {
              "key": "is_deleted",
              "type": "boolean"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_persons": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "is_identified",
              "type": "boolean"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id"
              ]
          },
          {
              "key": "is_deleted",
              "type": "boolean"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_groups": [
          {
              "key": "index",
              "type": "integer"
          },
          {
              "key": "key",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "updated_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          }
      ],
      "raw_cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi"
              ]
          },
          {
              "key": "sign",
              "type": "integer"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_person_overrides": [
          {
              "key": "old_person_id",
              "type": "string"
          },
          {
              "key": "override_person_id",
              "type": "string"
          },
          {
              "key": "oldest_event",
              "type": "datetime"
          },
          {
              "key": "merged_at",
              "type": "datetime"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "numbers": [
          {
              "key": "number",
              "type": "integer"
          }
      ]
  }
  '''
# ---
# name: TestDatabase.test_serialize_database_with_person_on_events_enabled
  '''
  {
      "events": [
          {
              "key": "uuid",
              "type": "string"
          },
          {
              "key": "event",
              "type": "string"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "elements_chain",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "$session_id",
              "type": "string"
          },
          {
              "key": "$window_id",
              "type": "string"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ]
          },
          {
              "key": "poe",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "id",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_0",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_1",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_2",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_3",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "goe_4",
              "type": "virtual_table",
              "table": "events",
              "fields": [
                  "key",
                  "created_at",
                  "properties"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "poe"
              ]
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "$group_0",
              "type": "string"
          },
          {
              "key": "group_0",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_1",
              "type": "string"
          },
          {
              "key": "group_1",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_2",
              "type": "string"
          },
          {
              "key": "group_2",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_3",
              "type": "string"
          },
          {
              "key": "group_3",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "$group_4",
              "type": "string"
          },
          {
              "key": "group_4",
              "type": "lazy_table",
              "table": "groups",
              "fields": [
                  "index",
                  "team_id",
                  "key",
                  "created_at",
                  "updated_at",
                  "properties"
              ]
          },
          {
              "key": "session",
              "type": "lazy_table",
              "table": "events",
              "fields": [
                  "id",
                  "duration"
              ]
          }
      ],
      "groups": [
          {
              "key": "index",
              "type": "integer"
          },
          {
              "key": "key",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "updated_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          }
      ],
      "persons": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "is_identified",
              "type": "boolean"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id"
              ]
          }
      ],
      "person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi"
              ]
          }
      ],
      "person_overrides": [
          {
              "key": "old_person_id",
              "type": "string"
          },
          {
              "key": "override_person_id",
              "type": "string"
          },
          {
              "key": "oldest_event",
              "type": "datetime"
          },
          {
              "key": "merged_at",
              "type": "datetime"
          },
          {
              "key": "created_at",
              "type": "datetime"
          }
      ],
      "session_replay_events": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "first_url",
              "type": "string"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "mouse_activity_count",
              "type": "integer"
          },
          {
              "key": "active_milliseconds",
              "type": "integer"
          },
          {
              "key": "console_log_count",
              "type": "integer"
          },
          {
              "key": "console_warn_count",
              "type": "integer"
          },
          {
              "key": "console_error_count",
              "type": "integer"
          },
          {
              "key": "size",
              "type": "integer"
          },
          {
              "key": "event_count",
              "type": "integer"
          },
          {
              "key": "message_count",
              "type": "integer"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          },
          {
              "key": "start_time",
              "type": "datetime"
          },
          {
              "key": "end_time",
              "type": "datetime"
          }
      ],
      "cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi"
              ]
          }
      ],
      "static_cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi"
              ]
          }
      ],
      "log_entries": [
          {
              "key": "log_source",
              "type": "string"
          },
          {
              "key": "log_source_id",
              "type": "string"
          },
          {
              "key": "instance_id",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "message",
              "type": "string"
          },
          {
              "key": "level",
              "type": "string"
          }
      ],
      "console_logs_log_entries": [
          {
              "key": "log_source",
              "type": "string"
          },
          {
              "key": "log_source_id",
              "type": "string"
          },
          {
              "key": "instance_id",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "message",
              "type": "string"
          },
          {
              "key": "level",
              "type": "string"
          }
      ],
      "batch_export_log_entries": [
          {
              "key": "log_source",
              "type": "string"
          },
          {
              "key": "log_source_id",
              "type": "string"
          },
          {
              "key": "instance_id",
              "type": "string"
          },
          {
              "key": "timestamp",
              "type": "datetime"
          },
          {
              "key": "message",
              "type": "string"
          },
          {
              "key": "level",
              "type": "string"
          }
      ],
      "raw_session_replay_events": [
          {
              "key": "session_id",
              "type": "string"
          },
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "min_first_timestamp",
              "type": "datetime"
          },
          {
              "key": "max_last_timestamp",
              "type": "datetime"
          },
          {
              "key": "click_count",
              "type": "integer"
          },
          {
              "key": "keypress_count",
              "type": "integer"
          },
          {
              "key": "mouse_activity_count",
              "type": "integer"
          },
          {
              "key": "active_milliseconds",
              "type": "integer"
          },
          {
              "key": "console_log_count",
              "type": "integer"
          },
          {
              "key": "console_warn_count",
              "type": "integer"
          },
          {
              "key": "console_error_count",
              "type": "integer"
          },
          {
              "key": "size",
              "type": "integer"
          },
          {
              "key": "event_count",
              "type": "integer"
          },
          {
              "key": "message_count",
              "type": "integer"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id",
                  "person"
              ]
          },
          {
              "key": "person",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person"
              ]
          },
          {
              "key": "person_id",
              "type": "field_traverser",
              "chain": [
                  "pdi",
                  "person_id"
              ]
          }
      ],
      "raw_person_distinct_ids": [
          {
              "key": "distinct_id",
              "type": "string"
          },
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi"
              ]
          },
          {
              "key": "is_deleted",
              "type": "boolean"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_persons": [
          {
              "key": "id",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          },
          {
              "key": "is_identified",
              "type": "boolean"
          },
          {
              "key": "pdi",
              "type": "lazy_table",
              "table": "person_distinct_ids",
              "fields": [
                  "team_id",
                  "distinct_id",
                  "person_id"
              ]
          },
          {
              "key": "is_deleted",
              "type": "boolean"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_groups": [
          {
              "key": "index",
              "type": "integer"
          },
          {
              "key": "key",
              "type": "string"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "updated_at",
              "type": "datetime"
          },
          {
              "key": "properties",
              "type": "json"
          }
      ],
      "raw_cohort_people": [
          {
              "key": "person_id",
              "type": "string"
          },
          {
              "key": "cohort_id",
              "type": "integer"
          },
          {
              "key": "person",
              "type": "lazy_table",
              "table": "persons",
              "fields": [
                  "id",
                  "created_at",
                  "team_id",
                  "properties",
                  "is_identified",
                  "pdi"
              ]
          },
          {
              "key": "sign",
              "type": "integer"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "raw_person_overrides": [
          {
              "key": "old_person_id",
              "type": "string"
          },
          {
              "key": "override_person_id",
              "type": "string"
          },
          {
              "key": "oldest_event",
              "type": "datetime"
          },
          {
              "key": "merged_at",
              "type": "datetime"
          },
          {
              "key": "created_at",
              "type": "datetime"
          },
          {
              "key": "version",
              "type": "integer"
          }
      ],
      "numbers": [
          {
              "key": "number",
              "type": "integer"
          }
      ]
  }
  '''
# ---
